# vnpy

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
docs/: conf.py
examples/alpha_research/: download_data_rq.ipynb
examples/candle_chart/: run.py
examples/client_server/: run_server.py
examples/cta_backtesting/: backtesting_demo.ipynb  portfolio_backtesting.ipynb  trade_by_trade.ipynb
examples/no_ui/: run.py
examples/portfolio_backtesting/: backtesting_demo.ipynb
examples/simple_rpc/: test_client.py
examples/spread_backtesting/: backtesting.ipynb
examples/veighna_trader/: run.py
vnpy/: __init__.py
vnpy/alpha/: __init__.py  lab.py
vnpy/alpha/dataset/: __init__.py  cs_function.py  processor.py  ta_function.py  template.py  ts_function.py  utility.py
vnpy/alpha/dataset/datasets/: alpha_158.py
vnpy/alpha/model/: template.py
vnpy/alpha/model/models/: lasso_model.py  lgb_model.py  mlp_model.py
vnpy/alpha/strategy/: __init__.py  backtesting.py  template.py
vnpy/alpha/strategy/strategies/: equity_demo_strategy.py
vnpy/chart/: axis.py  item.py  manager.py  widget.py
vnpy/event/: engine.py
vnpy/rpc/: client.py  server.py
vnpy/trader/: app.py  constant.py  converter.py  database.py  datafeed.py  engine.py  event.py  gateway.py  object.py  optimize.py  setting.py  utility.py
vnpy/trader/locale/: __init__.py
vnpy/trader/ui/: __init__.py  mainwindow.py  qt.py  utilities.py  widget.py
